examples/bounded-types/compile_fail/undefined_type_reference.stderr
error: marigold parse error: MarigoldParseError("Bounded type validation failed:\n  - Undefined type: 'NonExistent'")
  --> compile_fail/undefined_type_reference.rs:6:13
   |
 6 |       let _ = m!(
   |  _____________^
 7 | |         struct Sensor {
 8 | |             reading: int[0, NonExistent.len()]
...  |
11 | |     )
   | |_____^
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
